force-app/main/default/objects/DIA_Waiver_Information__c/DIA_Waiver_Information__c.object-meta.xml
<CustomObject>
    <label>DIA Waiver Information</label>
    <nameField>
        <displayFormat>DIAWaiver-{000000}</displayFormat>
        <label>DIA Waiver Information Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DIA Waiver Information</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>