force-app/main/default/objects/DIA_Waiver_Information__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DIA Case</label>
    <referenceTo>DIA_Case__c</referenceTo>
    <relationshipLabel>DIA Waiver Information</relationshipLabel>
    <relationshipName>DIA_Waiver_Information</relationshipName>
    <type>Lookup</type>
</CustomField>