force-app/main/default/objects/DIA_Waiver_Information__c/fields/Days_Waiver_Extension_Request_Pending__c.field-meta.xml
<CustomField>
    <fullName>Days_Waiver_Extension_Request_Pending__c</fullName>
    <formula>IF(
    NOT(ISBLANK(Waiver_Initiated_Date__c)),
    IF(
        NOT(ISBLANK(Waiver_Approved_Date__c)),
        Waiver_Approved_Date__c - Waiver_Initiated_Date__c,
        IF(
            NOT(ISBLANK(Waiver_Denied_Date__c)),
            Waiver_Denied_Date__c - Waiver_Initiated_Date__c,
            NULL
        )
    ),
    NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Waiver/Extension Request Pending</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>