force-app/main/default/objects/DIA_Waiver_Information__c/fields/Extension_Denied_Date__c.field-meta.xml
<CustomField>
    <fullName>Extension_Denied_Date__c</fullName>
    <formula>IF(
    NOT(ISBLANK(Waiver_Denied_Date__c)),
    TEXT(Waiver_Denied_Date__c) &amp; &quot; disapproved&quot;,
    &quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Extension Denied Date</label>
    <type>Text</type>
</CustomField>