force-app/main/default/objects/DIA_Waiver_Information__c/fields/Extension_Request_Status__c.field-meta.xml
<CustomField>
    <fullName>Extension_Request_Status__c</fullName>
    <formula>IF(
    NOT(ISBLANK(Waiver_Approved_Date__c)),
    TEXT(Waiver_Approved_Date__c) &amp; &quot; approved&quot;,
    &quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Extension Request Status</label>
    <type>Text</type>
</CustomField>