force-app/main/default/objects/DIA_Waiver_Information__c/fields/justification__c.field-meta.xml
<CustomField>
    <fullName>justification__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>justification</label>
    <type>TextArea</type>
</CustomField>