force-app/main/default/objects/DIA_Waiver_Information__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DIA Lead</label>
    <referenceTo>DIA_Lead__c</referenceTo>
    <relationshipLabel>DIA_Waiver Information</relationshipLabel>
    <relationshipName>DIA_Waiver_Information</relationshipName>
    <type>Lookup</type>
</CustomField>